--- a/templates/home.html
+++ b/templates/home.html
@@ -20,5 +20,12 @@
     On the same axes, sketch the graphs of $y=\frac{1}{x-a}$
     and $y=b\left|x-a\right|$, where $a$ and $b$ are positive constants.
 </body>
-
+    
+#alternate body if using the latex library 
+#<body>
+    #<object data=”qn.pdf" type=”application/pdf” width=”100%” height=”100%”>
+#Example fallback content: This browser does not support PDFs. Please download the PDF to view it: Download PDF.
+#</object>
+#</body>
+        
 </html>
