--- a/templates/home.html
+++ b/templates/home.html
@@ -23,8 +23,8 @@
     
 #alternate body if using the latex library 
 #<body>
-    #<object data=”qn.pdf" type=”application/pdf” width=”100%” height=”100%”>
-#Example fallback content: This browser does not support PDFs. Please download the PDF to view it: Download PDF.
+    #<object data="qn.pdf" type="application/pdf" width="100%" height="100%">
+#Example fallback content: This browser does not support PDFs.
 #</object>
 #</body>
         
