--- a/templates/pdf.html
+++ b/templates/pdf.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <title>PDF View</title>
+</head>
+
 <body>
 
-<h1>PDF</h1>
+    <h1>PDF</h1>
 
-<iframe src="{{url}}">
-  <p>Your browser does not support iframes.</p>
-</iframe>
+    <iframe src="{{url}}#toolbar=0" width="100%" height="100%">
+        <p>Your browser does not support iframes.</p>
+    </iframe>
+    <a href="/">Home</a>
 
 </body>
+
 </html>
