--- a/templates/pdf.html
+++ b/templates/pdf.html
@@ -9,7 +9,7 @@
 
     <h1>PDF</h1>
 
-    <iframe src="{{url}}#toolbar=0" width="100%" height="100%">
+    <iframe src="{{url}}#toolbar=0" width="100%" height="500px">
         <p>Your browser does not support iframes.</p>
     </iframe>
     <a href="/">Home</a>
