--- a/templates/index.html
+++ b/templates/index.html
@@ -1,44 +1,173 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
+
+
 <head>
+
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
   <meta charset="UTF-8" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Document</title>
+
   <style>
+
+  
+  
     form {
-      width: 30%;
+
+      width: 50%;
+
       margin: auto;
+
       border: black 1px solid;
+
       border-radius: 10px;
+	  
+	  height : 120px; 
+	  
+	  position: relative;
+	  
+	  top: 100px;
+	  
+
+
     }
+	body{
+	
+	  background-image: url("http://www.ghettosingapore.com/wp-content/uploads/Featured_NJC-College-of-the-Nation.jpg");
+	
+	  background-size: 100% 100%;
+	
+	  background-attachment: fixed;
+	
+	  background-repeat: no-repeat;
+	
+	  color: white;
+	}
+
+	.button{
+	
+	  color: red;
+	
+	  background-color: white;
+	
+	  padding: 0.5em;
+	
+	  font-size : 16px;
+	
+	  border-color: white;
+	
+	  font-family: ink free;
+	
+	  font-weight: bold;
+	
+	}
+	
+	.button:hover {
+	
+	  background-color: red;
+	
+	  color: white;
+	
+	  border-color: red;
+
+	
+	}
+  
 
     .row {
+
       display: flex;
+
       padding: 0.5em;
+
       justify-content: space-evenly;
+	  
+	  font-size: 20px;
+	  
+	  color: black;
+	  
+	  font-weight: bold;
+	  
+	  font-family: ink free;
+
     }
+
+
 
     label {
+
       margin: 0.5em;
+
       width: 30%;
+
     }
+
+
 
     .textbox,
+
     input {
+
       margin: 0.5em;
+
       width: 40%;
+
     }
+	
+	.caption {
+	
+	  text-align: center;
+	
+	  font-size: 50px;
+
+	  position: relative;
+
+	  top: 50px;
+
+	  font-family: Lucida Handwriting;
+
+	  color: red;
+	}
+	
+	body:after {
+    content: "\00a9 20SH07";
+    
+	  font-size: 150%;
+    
+	  position: relative;
+    
+	  top: 500px;
+    
+}
+
   </style>
+
 </head>
 
+
+
 <body>
+
+  <div class = "caption">MATH IS LOVE MATH IS LIFE</div>
+
   <form action="/submit" method="POST">
-    <div class="row"><label>Topic</label> <input name="topic" type="text" /></div>
-    <div class="row"><button type="submit">Save</button> <button type="reset">Cancel</button></div>
+
+    <div class="row"><label>Topic:</label> <input name="topic" type="text" /></div>
+
+    <div class="row"><button type="submit" class = "button">Search</button> <button type="reset" class = "button">Cancel</button></div>
+
   </form>
+
 </body>
+
+
 
 </html>
