--- a/templates/index.html
+++ b/templates/index.html
@@ -137,15 +137,14 @@
 	  color: red;
 	}
 	
-	body:after {
-    content: "\00a9 20SH07";
-    
+	footer {
+	
 	  font-size: 150%;
-    
+	  
 	  position: relative;
-    
+	  
 	  top: 500px;
-    
+	  
 }
 
   </style>
@@ -165,6 +164,10 @@
     <div class="row"><button type="submit" class = "button">Search</button> <button type="reset" class = "button">Cancel</button></div>
 
   </form>
+  
+<footer>
+  <div> ©20SH07 All rights reserved </div>
+</footer>
 
 </body>
 
