--- a/templates/pdf.html
+++ b/templates/pdf.html
@@ -2,18 +2,36 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <title>PDF View</title>
 </head>
 
 <body>
-
-    <h1>PDF</h1>
-
-    <iframe src="{{url}}#toolbar=0" style="overflow: auto;width: 100%;height: 80vh;">
-        <p>Your browser does not support iframes.</p>
-    </iframe>
-    <a href="/">Home</a>
-
+    <nav class="navbar is-white topNav" role="navigation" aria-label="dropdown navigation">
+        <div class="navbar-brand">
+            <a class="navbar-item" href="/">
+                MathGen
+            </a>
+            <div class="navbar-burger burger" data-target="topNav">
+            </div>
+        </div>
+    </nav>
+    <section>
+        <div class="container">
+            <div class="box">
+                <h1 class="title">PDF</h1>
+                <iframe src="{{url}}#toolbar=0" style="overflow: auto;width: 100%;height: 80vh;">
+                    <p>Your browser does not support iframes.</p>
+                </iframe>
+                <nav class="is-right has-text-right">
+                    <a href="/" class="button">Home</a>
+                </nav>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
